//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Institution {
  instituteID String [pk]
  code String [not null]
  name String [not null]
  country String [not null]
  authors Author [not null]
}

Table Location {
  locationID String [pk]
  building String [not null]
  room String [not null]
  sessions Session [not null]
}

Table Paper {
  paperID String [pk]
  title String [not null]
  abstract String [not null]
  authors Author [not null]
  presenterID Int
  pdfLink String [not null]
  reviews Review [not null]
  session Session
  sesID String
  accepted Boolean [not null, default: false]
}

Table Review {
  reviewID String [pk]
  overallEvaluation Int [not null, default: 0]
  paperContribution Int [not null, default: 0]
  paperStrength String [not null, default: '']
  paperWeaknesses String [not null, default: '']
  paper Paper [not null]
  paperID String [not null]
  reviewer Reviewer
  reviewerId Int
}

Table Session {
  sesID String [pk]
  title String [not null]
  location Location [not null]
  locationID String [not null]
  fromTime String [not null]
  endTime String [not null]
  schedule Schedule [not null]
  schID String [not null]
  papers Paper [not null]
}

Table Schedule {
  schID String [pk]
  date String [not null]
  sessions Session [not null]
}

Table User {
  id Int [pk, increment]
  first_name String [not null]
  last_name String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null]
  paperID String
}

Table Author {
  id Int [pk, increment]
  first_name String [not null]
  last_name String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null]
  authoredPaper Paper
  paperID String
  institute Institution
  instituteID String
}

Table Reviewer {
  reviewerId Int [pk, increment]
  first_name String [not null]
  last_name String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null]
  reviews Review [not null]
}

Ref: Paper.sesID > Session.sesID

Ref: Review.paperID > Paper.paperID [delete: Cascade]

Ref: Review.reviewerId > Reviewer.reviewerId

Ref: Session.locationID > Location.locationID

Ref: Session.schID > Schedule.schID [delete: Cascade]

Ref: Author.paperID > Paper.paperID

Ref: Author.instituteID > Institution.instituteID